--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header class="cabecalho">
             <div class="container">
                 <input type="checkbox" id="menu" class="container__botao" />
-                <label for="menu">
+                <label for="menu" class="container__rotulo">
                     <span class="cabecalho__menu-hamburguer container__imagem"></span>
                 </label>
                 <ul class="lista__menu">
@@ -70,7 +70,7 @@
                 <li class="opcoes__item"><a href="#" class="opcoes__link">MINHA ESTANTE</a></li>
             </ul>
 
-            <div class="container">
+            <div class="container__icones">
                 <a href="#"
                     ><picture>
                         <source media="(min-width: 1440px)" srcset="" />
@@ -97,65 +97,69 @@
 
             <section class="carrossel">
                 <h2 class="carrossel__titulo">ÚLTIMOS LANÇAMENTOS</h2>
-                <div class="swiper">
-                    <div class="swiper-pagination"></div>
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide"><img src="./assets/ApacheKafka.svg" alt="Livro Apache Kfka" /></div>
-                        <div class="swiper-slide"><img src="./assets/Javascript.svg" alt="Livro de JavaScript" /></div>
-                        <div class="swiper-slide"><img src="./assets/Lideranca.svg" alt="Livro sobre liderança" /></div>
-                        <div class="swiper-slide"><img src="./assets/Guia Front-end.svg" alt="Livro Guia de Front-End" /></div>
-                        <div class="swiper-slide"><img src="./assets/Portugol.svg" alt="Livro Portugol" /></div>
-                        <div class="swiper-slide"><img src="./assets/Acessibilidade.svg" alt="Livro sobre Acessibilidade" /></div>
-                        ...
-                    </div>
-                </div>
-
-                <div class="carrossel__saiba-mais">
-                    <div class="saiba-mais__primeira-box">
-                        <h3 class="saiba-mais__preimeiro-subtitulo">Talvez você também se interesse por...</h3>
-                        <h2 class="saiba-mais__segundo-subtitulo">Angular 11 e Firebase</h2>
-                        <p class="saiba-mais__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
-                        <div class="saiba-mais__icones-box">
-                            <a href="#"><img src="./assets/Favoritos.svg" alt="Meus Favoritos" class="saiba-mais__icone" /></a>
-                            <a href="#"><img src="./assets/Compras.svg" alt="Carrinho de compras" class="saiba-mais__icone" /></a>
+                <div class="carrossel__box">
+                    <div class="swiper">
+                        <div class="swiper-pagination"></div>
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide"><img src="./assets/ApacheKafka.svg" alt="Livro Apache Kfka" /></div>
+                            <div class="swiper-slide"><img src="./assets/Javascript.svg" alt="Livro de JavaScript" /></div>
+                            <div class="swiper-slide"><img src="./assets/Lideranca.svg" alt="Livro sobre liderança" /></div>
+                            <div class="swiper-slide"><img src="./assets/Guia Front-end.svg" alt="Livro Guia de Front-End" /></div>
+                            <div class="swiper-slide"><img src="./assets/Portugol.svg" alt="Livro Portugol" /></div>
+                            <div class="swiper-slide"><img src="./assets/Acessibilidade.svg" alt="Livro sobre Acessibilidade" /></div>
+                            ...
                         </div>
                     </div>
-                    <div class="saiba-mais__segunda-box">
-                        <img src="./assets/Angular.svg" alt="Angular Logo" class="saiba-mais__imagem" />
-                        <a href="#" class="saiba-mais__link">Saiba Mais</a>
+
+                    <div class="carrossel__saiba-mais">
+                        <div class="saiba-mais__primeira-box">
+                            <h3 class="saiba-mais__preimeiro-subtitulo">Talvez você também se interesse por...</h3>
+                            <h2 class="saiba-mais__segundo-subtitulo">Angular 11 e Firebase</h2>
+                            <p class="saiba-mais__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                            <div class="saiba-mais__icones-box">
+                                <a href="#"><img src="./assets/Favoritos.svg" alt="Meus Favoritos" class="saiba-mais__icone" /></a>
+                                <a href="#"><img src="./assets/Compras.svg" alt="Carrinho de compras" class="saiba-mais__icone" /></a>
+                            </div>
+                        </div>
+                        <div class="saiba-mais__segunda-box">
+                            <img src="./assets/Angular.svg" alt="Angular Logo" class="saiba-mais__imagem" />
+                            <a href="#" class="saiba-mais__link">Saiba Mais</a>
+                        </div>
                     </div>
                 </div>
             </section>
 
             <section class="carrossel">
                 <h2 class="carrossel__titulo">MAIS VENDIDOS</h2>
-                <div class="swiper">
-                    <div class="swiper-pagination"></div>
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide"><img src="./assets/react-book.svg" alt="Livro sobre React" /></div>
-                        <div class="swiper-slide"><img src="./assets/node-book.svg" alt="Livro sobre NodeJs" /></div>
-                        <div class="swiper-slide"><img src="./assets/angular-book.svg" alt="Livro sobre Angulas" /></div>
-                        <div class="swiper-slide"><img src="./assets/gestao-book.svg" alt="Livro sobre Gestão" /></div>
-                        <div class="swiper-slide"><img src="./assets/ux-book.svg" alt="Livro sobre UX" /></div>
-                        <div class="swiper-slide"><img src="./assets/mean-book.svg" alt="Livro sobre Mean" /></div>
-                        ...
-                    </div>
-                </div>
-
-                <div class="carrossel__saiba-mais">
-                    <div class="saiba-mais__primeira-box">
-                        <img src="./assets/Estrelinhas.svg" alt="Estrelinhas de avaliação" class="saiba-mais__estrelas" />
-                        <h3 class="saiba-mais__preimeiro-subtitulo">Autora do Mês</h3>
-                        <h2 class="saiba-mais__segundo-subtitulo">Juliana Agarikov</h2>
-                        <p class="saiba-mais__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
-                        <div class="saiba-mais__icones-box">
-                            <a href="#"><img src="./assets/Favoritos.svg" alt="Meus Favoritos" class="saiba-mais__icone" /></a>
-                            <a href="#"><img src="./assets/Compras.svg" alt="Carrinho de compras" class="saiba-mais__icone" /></a>
+                <div class="carrossel__box">
+                    <div class="swiper">
+                        <div class="swiper-pagination"></div>
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide"><img src="./assets/react-book.svg" alt="Livro sobre React" /></div>
+                            <div class="swiper-slide"><img src="./assets/node-book.svg" alt="Livro sobre NodeJs" /></div>
+                            <div class="swiper-slide"><img src="./assets/angular-book.svg" alt="Livro sobre Angulas" /></div>
+                            <div class="swiper-slide"><img src="./assets/gestao-book.svg" alt="Livro sobre Gestão" /></div>
+                            <div class="swiper-slide"><img src="./assets/ux-book.svg" alt="Livro sobre UX" /></div>
+                            <div class="swiper-slide"><img src="./assets/mean-book.svg" alt="Livro sobre Mean" /></div>
+                            ...
                         </div>
                     </div>
-                    <div class="saiba-mais__segunda-box">
-                        <img src="./assets/Escritora.svg" alt="Angular Logo" class="saiba-mais__imagem" />
-                        <a href="#" class="saiba-mais__link">Saiba Mais</a>
+
+                    <div class="carrossel__saiba-mais">
+                        <div class="saiba-mais__primeira-box">
+                            <img src="./assets/Estrelinhas.svg" alt="Estrelinhas de avaliação" class="saiba-mais__estrelas" />
+                            <h3 class="saiba-mais__preimeiro-subtitulo">Autora do Mês</h3>
+                            <h2 class="saiba-mais__segundo-subtitulo">Juliana Agarikov</h2>
+                            <p class="saiba-mais__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+                            <div class="saiba-mais__icones-box">
+                                <a href="#"><img src="./assets/Favoritos.svg" alt="Meus Favoritos" class="saiba-mais__icone" /></a>
+                                <a href="#"><img src="./assets/Compras.svg" alt="Carrinho de compras" class="saiba-mais__icone" /></a>
+                            </div>
+                        </div>
+                        <div class="saiba-mais__segunda-box">
+                            <img src="./assets/Escritora.svg" alt="Angular Logo" class="saiba-mais__imagem" />
+                            <a href="#" class="saiba-mais__link">Saiba Mais</a>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -310,6 +314,10 @@
                     640: {
                         slidesPerView: 3,
                         spaceBetween: 20,
+                    },
+                    1440: {
+                        slidesPerView: 3,
+                        spaceBetween: 50,
                     },
                 },
 
