hover e outras cores

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
             <ul class="opcoes">
                 <input type="checkbox" id="opcoes-menu" class="opcoes__botao" />
-                <label for="opcoes-menu">
-                    <li class="opcoes__item">CATEGORIAS</li>
+                <label for="opcoes-menu" class="opcoes__rotulo">
+                    <span class="opcoes__item">CATEGORIAS</span>
                 </label>
 
                 <ul class="lista__menu">
